--- a/main.css
+++ b/main.css
@@ -10,3 +10,11 @@
     left: 100px;
     width: 200px;
     height: 100px;
+}
+.linebox{
+    background: green;
+    display: inline;
+    width: 500px;
+    height: 500px;
+    
+}
